// Copyright (c) 2019-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

package aaa.protos;
option go_package = "magma/feg/gateway/services/aaa/protos";

message context {
    string session_id = 1;
    string imsi = 2;
    bytes msk = 3;
    string identity = 4;
    string msisdn = 5;
    string apn = 6;
    string mac_addr = 7;
    string ip_addr = 8;
    string auth_session_id = 9;
    string acct_session_id = 10;
}

message Void {
}
